# spam_bert

./: .gitignore  Dockerfile  LICENSE.md  README.md  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements.txt  setup.cfg  spam_bert.py
.github/workflows/: ci.yml  docker-ci.yml  docker-nightly.yml  docker-release.yml  nightly_e2e.yml  release.yml
benchmarks/: enron.py
docker/: entrypoint.sh
src/spam_bert/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_classify.py  test_cli.py  test_e2e_rest.py  test_eml_and_rest.py  test_normalize_and_chunk.py  test_resolve_and_cache.py  test_rest_errors.py  test_utils.py
train/: finetune_tinybert-enron-spam.py  generate_synthetic_data.py  train_tinybert.py  tune_synthetic_ratio.py  tune_threshold.py
