[metadata]
name = spam-bert-detector
version = 0.1.0
description = BERT-powered spam detector with CLI and REST API, long-email chunking, and configurable model caching.
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Eder
license = MIT
license_files = LICENSE.md
url = https://github.com/<youruser>/spam_bert
project_urls =
    Source = https://github.com/<youruser>/spam_bert
    Issues = https://github.com/<youruser>/spam_bert/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Email
    Topic :: Security

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    transformers>=4.43.0
    torch>=2.2.0
    huggingface_hub>=0.23.0
    fastapi>=0.111.0
    uvicorn>=0.30.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.2
    pytest-cov>=5.0
    httpx>=0.27
    ruff>=0.5.0
    black>=24.4.0

[options.entry_points]
console_scripts =
    spam-bert = spam_bert.app:main

[tool:pytest]
addopts = -ra
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203,W503

[coverage:run]
branch = True
source = spam_bert
